--- a/remove_apache2.yml
+++ b/remove_apache2.yml
@@ -10,9 +10,10 @@
     - name: install apache2 package
       apt: 
         name: apache2
+        state: absent
 
     - name: install php support for apache2
       apt:
         name: libapache2-mod-php
-        state: latest
+        state: absent
 
